change: toast configs

--- a/locales/en.json
+++ b/locales/en.json
@@ -82,19 +82,36 @@
   "COMPANIES_LIST": "Companies List",
   "SEARCH": "Search",
   "LOGIN_SUCCESS": "Login Success",
+  "LOGIN_SUCCESS_DESCRIPTION": "You have successfully logged in",
   "LOGIN_ERROR": "Login Error",
+  "LOGIN_ERROR_DESCRIPTION": "Error logging in",
   "LOGOUT_SUCCESS": "Logout Success",
+  "LOGOUT_SUCCESS_DESCRIPTION": "You have successfully logged out",
   "REGISTER_SUCCESS": "You have successfully registered",
+  "REGISTER_SUCCESS_DESCRIPTION": "You have successfully registered",
   "REGISTER_ERROR": "Error registering",
+  "REGISTER_ERROR_DESCRIPTION": "Error registering user",
   "PROFILE_UPDATED_SUCCESSFULLY": "Profile updated successfully",
+  "PROFILE_UPDATED_SUCCESSFULLY_DESCRIPTION": "You have successfully updated your profile",
   "PROFILE_UPDATED_ERROR": "Error updating profile",
+  "PROFILE_UPDATED_ERROR_DESCRIPTION": "Error updating profile",
   "PASSWORD_UPDATED_SUCCESSFULLY": "Password updated successfully",
+  "PASSWORD_UPDATED_SUCCESSFULLY_DESCRIPTION": "You have successfully updated your password",
   "PASSWORD_UPDATED_ERROR": "Error updating password",
+  "PASSWORD_UPDATED_ERROR_DESCRIPTION": "Error updating password",
   "AVATAR_UPDATED_SUCCESSFULLY": "Avatar updated successfully",
+  "AVATAR_UPDATED_SUCCESSFULLY_DESCRIPTION": "You have successfully updated your avatar",
   "AVATAR_UPDATED_ERROR": "Error updating avatar",
+  "AVATAR_UPDATED_ERROR_DESCRIPTION": "Error updating avatar image",
   "CV_UPDATED_SUCCESSFULLY": "CV updated successfully",
+  "CV_UPDATED_SUCCESSFULLY_DESCRIPTION": "You have successfully updated your CV",
   "CV_UPDATED_ERROR": "Error updating CV",
+  "CV_UPDATED_ERROR_DESCRIPTION": "Error updating CV",
   "LOGO_UPDATED_SUCCESSFULLY": "Logo updated successfully",
+  "LOGO_UPDATED_SUCCESSFULLY_DESCRIPTION": "You have successfully updated your logo",
   "LOGO_UPDATED_ERROR": "Error updating logo",
-  "CHANGE_MODE_TO": "Change mode to"
+  "LOGO_UPDATED_ERROR_DESCRIPTION": "Error updating logo",
+  "CHANGE_MODE_TO": "Change mode to",
+  "JOB_APPLIED_SUCCESSFULLY": "Job applied successfully",
+  "SUCCESS": "Success"
 }
