--- a/locales/fr.json
+++ b/locales/fr.json
@@ -82,19 +82,36 @@
   "COMPANIES_LIST": "Liste des entreprises",
   "SEARCH": "Rechercher",
   "LOGIN_SUCCESS": "Connecté avec succès",
+  "LOGIN_SUCCESS_DESCRIPTION": "Vous êtes maintenant connecté en tant que",
   "LOGIN_ERROR": "Erreur de connexion",
+  "LOGIN_ERROR_DESCRIPTION": "Veuillez vérifier vos informations de connexion et réessayer.",
   "LOGOUT_SUCCESS": "Déconnecté avec succès",
+  "LOGOUT_SUCCESS_DESCRIPTION": "Vous êtes maintenant déconnecté.",
   "REGISTER_SUCCESS": "Vous vous êtes inscrit avec succès",
+  "REGISTER_SUCCESS_DESCRIPTION": "Vous pouvez maintenant vous connecter avec votre e-mail et votre mot de passe.",
   "REGISTER_ERROR": "Erreur lors de l'inscription",
+  "REGISTER_ERROR_DESCRIPTION": "Veuillez vérifier vos informations d'inscription et réessayer.",
   "PROFILE_UPDATED_SUCCESSFULLY": "Profil mis à jour avec succès",
+  "PROFILE_UPDATED_SUCCESSFULLY_DESCRIPTION": "Vos informations de profil ont été mises à jour avec succès.",
   "PROFILE_UPDATED_ERROR": "Erreur lors de la mise à jour du profil",
+  "PROFILE_UPDATED_ERROR_DESCRIPTION": "Veuillez vérifier vos informations de profil et réessayer.",
   "PASSWORD_UPDATED_SUCCESSFULLY": "Mot de passe mis à jour avec succès",
+  "PASSWORD_UPDATED_SUCCESSFULLY_DESCRIPTION": "Votre mot de passe a été mis à jour avec succès.",
   "PASSWORD_UPDATED_ERROR": "Erreur lors de la mise à jour du mot de passe",
+  "PASSWORD_UPDATED_ERROR_DESCRIPTION": "Veuillez vérifier vos informations de mot de passe et réessayer.",
   "AVATAR_UPDATED_SUCCESSFULLY": "Avatar mis à jour avec succès",
+  "AVATAR_UPDATED_SUCCESSFULLY_DESCRIPTION": "Votre avatar a été mis à jour avec succès.",
   "AVATAR_UPDATED_ERROR": "Erreur lors de la mise à jour de l'avatar",
+  "AVATAR_UPDATED_ERROR_DESCRIPTION": "Veuillez vérifier votre avatar et réessayer.",
   "CV_UPDATED_SUCCESSFULLY": "CV mis à jour avec succès",
+  "CV_UPDATED_SUCCESSFULLY_DESCRIPTION": "Votre CV a été mis à jour avec succès.",
   "CV_UPDATED_ERROR": "Erreur lors de la mise à jour du CV",
+  "CV_UPDATED_ERROR_DESCRIPTION": "Veuillez vérifier votre CV et réessayer.",
   "LOGO_UPDATED_SUCCESSFULLY": "Logo mis à jour avec succès",
+  "LOGO_UPDATED_SUCCESSFULLY_DESCRIPTION": "Le logo a été mis à jour avec succès.",
   "LOGO_UPDATED_ERROR": "Erreur lors de la mise à jour du logo",
-  "CHANGE_MODE_TO": "Changer le mode en"
+  "LOGO_UPDATED_ERROR_DESCRIPTION": "Veuillez vérifier votre logo et réessayer.",
+  "CHANGE_MODE_TO": "Changer le mode en",
+  "JOB_APPLIED_SUCCESSFULLY": "Emploi postulé avec succès",
+  "SUCCESS": "Succès"
 }
