--- a/locales/fr.json
+++ b/locales/fr.json
@@ -115,5 +115,16 @@
   "LOGO_UPDATED_ERROR_DESCRIPTION": "Veuillez vérifier votre logo et réessayer.",
   "CHANGE_MODE_TO": "Changer le mode en",
   "JOB_APPLIED_SUCCESSFULLY": "Emploi postulé avec succès",
-  "SUCCESS": "Succès"
+  "SUCCESS": "Succès",
+  "FORGOT_PASSWORD_SUCCESS": "Un e-mail de réinitialisation de mot de passe a été envoyé à votre adresse e-mail",
+  "FORGOT_PASSWORD_SUCCESS_DESCRIPTION": "Veuillez vérifier votre boîte de réception pour réinitialiser votre mot de passe.",
+  "FORGOT_PASSWORD_ERROR": "Erreur lors de l'envoi de l'e-mail de réinitialisation de mot de passe",
+  "FORGOT_PASSWORD_ERROR_DESCRIPTION": "Veuillez vérifier votre adresse e-mail et réessayer.",
+  "RESET_PASSWORD_SUCCESS": "Mot de passe réinitialisé avec succès",
+  "RESET_PASSWORD_SUCCESS_DESCRIPTION": "Vous pouvez maintenant vous connecter avec votre nouveau mot de passe.",
+  "RESET_PASSWORD_ERROR": "Erreur lors de la réinitialisation du mot de passe",
+  "RESET_PASSWORD_ERROR_DESCRIPTION": "Veuillez vérifier vos informations de réinitialisation de mot de passe et réessayer.",
+  "FORGOT_PASSWORD": "Mot de passe oublié",
+  "RESET_PASSWORD": "Réinitialiser le mot de passe",
+  "SEND_RESET_LINK": "Envoyer le lien de réinitialisation"
 }
