add: company jobs functionalities

--- a/locales/en.json
+++ b/locales/en.json
@@ -127,5 +127,35 @@
   "FORGOT_PASSWORD": "Forgot Password",
   "RESET_PASSWORD": "Reset Password",
   "SEND_RESET_LINK": "Send Reset Link",
-  "BACK": "Back"
+  "BACK": "Back",
+  "ADD_NEW_TAG_AND_HIT_ENTER": "Add a new tag and hit enter",
+  "SELECTED_TAGS": "Selected Tags",
+  "JOB_DESCRIPTION": "Job Description",
+  "JOB_TITLE": "Job Title",
+  "EDIT_JOB": "Edit Job",
+  "SAVE_CHANGES": "Save Changes",
+  "JOBS_APPLICATIONS": "Jobs Applications",
+  "JOB_UPDATED_SUCCESSFULLY": "Job updated successfully",
+  "JOB_UPDATED_SUCCESSFULLY_DESCRIPTION": "You have successfully updated the job",
+  "JOB_UPDATED_ERROR": "Error updating job",
+  "JOB_UPDATED_ERROR_DESCRIPTION": "Error updating job",
+  "JOB_DELETED_SUCCESSFULLY": "Job deleted successfully",
+  "JOB_DELETED_SUCCESSFULLY_DESCRIPTION": "You have successfully deleted the job",
+  "JOB_DELETED_ERROR": "Error deleting job",
+  "JOB_DELETED_ERROR_DESCRIPTION": "Error deleting job",
+  "COMPANY_UPDATED_SUCCESSFULLY": "Company updated successfully",
+  "COMPANY_UPDATED_SUCCESSFULLY_DESCRIPTION": "You have successfully updated the company",
+  "COMPANY_UPDATED_ERROR": "Error updating company",
+  "COMPANY_UPDATED_ERROR_DESCRIPTION": "Error updating company",
+  "COMPANY_DELETED_SUCCESSFULLY": "Company deleted successfully",
+  "COMPANY_DELETED_SUCCESSFULLY_DESCRIPTION": "You have successfully deleted the company",
+  "COMPANY_DELETED_ERROR": "Error deleting company",
+  "COMPANY_DELETED_ERROR_DESCRIPTION": "Error deleting company",
+  "COMPANY_JOBS": "Company Jobs",
+  "COMPANY_IMAGES": "Company Images",
+  "DELETE_COMPANY": "Delete Company",
+  "IMAGE_ADDED_SUCCESSFULLY": "Image added successfully",
+  "IMAGE_ADDED_SUCCESSFULLY_DESCRIPTION": "You have successfully added the image",
+  "IMAGE_ADDED_ERROR": "Error adding image",
+  "IMAGE_ADDED_ERROR_DESCRIPTION": "Error adding image"
 }
