--- a/locales/fr.json
+++ b/locales/fr.json
@@ -127,5 +127,35 @@
   "FORGOT_PASSWORD": "Mot de passe oublié",
   "RESET_PASSWORD": "Réinitialiser le mot de passe",
   "SEND_RESET_LINK": "Envoyer le lien de réinitialisation",
-  "BACK": "Retour"
+  "BACK": "Retour",
+  "ADD_NEW_TAG_AND_HIT_ENTER": "Ajouter une nouvelle balise et appuyer sur Entrée",
+  "SELECTED_TAGS": "Balises sélectionnées",
+  "JOB_DESCRIPTION": "Description de l'emploi",
+  "JOB_TITLE": "Titre de l'emploi",
+  "EDIT_JOB": "Modifier l'emploi",
+  "SAVE_CHANGES": "Enregistrer les modifications",
+  "JOBS_APPLICATIONS": "Applications d'emploi",
+  "JOB_UPDATED_SUCCESSFULLY": "Emploi mis à jour avec succès",
+  "JOB_UPDATED_SUCCESSFULLY_DESCRIPTION": "Les informations de l'emploi ont été mises à jour avec succès.",
+  "JOB_UPDATED_ERROR": "Erreur lors de la mise à jour de l'emploi",
+  "JOB_UPDATED_ERROR_DESCRIPTION": "Veuillez vérifier les informations de l'emploi et réessayer.",
+  "JOB_DELETED_SUCCESSFULLY": "Emploi supprimé avec succès",
+  "JOB_DELETED_SUCCESSFULLY_DESCRIPTION": "L'emploi a été supprimé avec succès.",
+  "JOB_DELETED_ERROR": "Erreur lors de la suppression de l'emploi",
+  "JOB_DELETED_ERROR_DESCRIPTION": "Veuillez vérifier l'emploi et réessayer.",
+  "COMPANY_UPDATED_SUCCESSFULLY": "Entreprise mise à jour avec succès",
+  "COMPANY_UPDATED_SUCCESSFULLY_DESCRIPTION": "Les informations de l'entreprise ont été mises à jour avec succès.",
+  "COMPANY_UPDATED_ERROR": "Erreur lors de la mise à jour de l'entreprise",
+  "COMPANY_UPDATED_ERROR_DESCRIPTION": "Veuillez vérifier les informations de l'entreprise et réessayer.",
+  "COMPANY_DELETED_SUCCESSFULLY": "Entreprise supprimée avec succès",
+  "COMPANY_DELETED_SUCCESSFULLY_DESCRIPTION": "L'entreprise a été supprimée avec succès.",
+  "COMPANY_DELETED_ERROR": "Erreur lors de la suppression de l'entreprise",
+  "COMPANY_DELETED_ERROR_DESCRIPTION": "Veuillez vérifier l'entreprise et réessayer.",
+  "COMPANY_JOBS": "Emplois de l'entreprise",
+  "COMPANY_IMAGES": "Images de l'entreprise",
+  "DELETE_COMPANY": "Supprimer l'entreprise",
+  "IMAGE_ADDED_SUCCESSFULLY:": "Image ajoutée avec succès",
+  "IMAGE_ADDED_SUCCESSFULLY_DESCRIPTION": "L'image a été ajoutée avec succès.",
+  "IMAGE_ADDED_ERROR": "Erreur lors de l'ajout de l'image",
+  "IMAGE_ADDED_ERROR_DESCRIPTION": "Veuillez vérifier l'image et réessayer."
 }
