--- a/locales/fr.json
+++ b/locales/fr.json
@@ -157,5 +157,6 @@
   "IMAGE_ADDED_SUCCESSFULLY:": "Image ajoutée avec succès",
   "IMAGE_ADDED_SUCCESSFULLY_DESCRIPTION": "L'image a été ajoutée avec succès.",
   "IMAGE_ADDED_ERROR": "Erreur lors de l'ajout de l'image",
-  "IMAGE_ADDED_ERROR_DESCRIPTION": "Veuillez vérifier l'image et réessayer."
+  "IMAGE_ADDED_ERROR_DESCRIPTION": "Veuillez vérifier l'image et réessayer.",
+  "API_COLLECTIONS": "Collections API"
 }
