refactor: enhance dashboard layout with new styles and responsive design

--- a/locales/en.json
+++ b/locales/en.json
@@ -161,5 +161,6 @@
   "API_COLLECTIONS": "API Collections",
   "ALLOW_COOKIES": "Allow Cookies",
   "LEARN_MORE": "Learn More",
-  "THIS_WEBSITE_USES_COOKIES": "This website uses cookies to ensure you get the best experience on our website."
+  "THIS_WEBSITE_USES_COOKIES": "This website uses cookies to ensure you get the best experience on our website.",
+  "LOAD_MORE": "Load More"
 }
