--- a/locales/fr.json
+++ b/locales/fr.json
@@ -161,5 +161,6 @@
   "API_COLLECTIONS": "Collections API",
   "ALLOW_COOKIES": "Autorise les cookies",
   "LEARN_MORE": "En savoir plus",
-  "THIS_WEBSITE_USES_COOKIES": "Ce site Web utilise des cookies pour garantir que vous obtenez la meilleure expérience sur notre site Web."
+  "THIS_WEBSITE_USES_COOKIES": "Ce site Web utilise des cookies pour garantir que vous obtenez la meilleure expérience sur notre site Web.",
+  "LOAD_MORE": "Charger plus"
 }
