refactor: adjust layout and styles for improved responsiveness and consistency across components

--- a/locales/en.json
+++ b/locales/en.json
@@ -21,7 +21,7 @@
   "GO_BACK_TO": "Go back to",
   "HOME_PAGE": "Home Page",
   "TITLE": "Title",
-  "JOB_BOARD": "Job Board",
+  "SAMPLE_JOB_BOARD": "Sample Job Board",
   "STATUS": "Status",
   "APPLIED": "Applied",
   "ERROR_FETCHING_JOBS": "Error fetching jobs",
