--- a/locales/fr.json
+++ b/locales/fr.json
@@ -21,7 +21,7 @@
   "GO_BACK_TO": "Retour à",
   "HOME_PAGE": "la page d'accueil",
   "TITLE": "Titre",
-  "JOB_BOARD": "Tableau des emplois",
+  "SAMPLE_JOB_BOARD": "Tableau d'emplois d'exemple",
   "STATUS": "Statut",
   "APPLIED": "Postulé",
   "ERROR_FETCHING_JOBS": "Erreur lors de la récupération des emplois",
