refactor: enhance job details and list components with improved state handling and tag filtering

--- a/locales/en.json
+++ b/locales/en.json
@@ -162,5 +162,7 @@
   "ALLOW_COOKIES": "Allow Cookies",
   "LEARN_MORE": "Learn More",
   "THIS_WEBSITE_USES_COOKIES": "This website uses cookies to ensure you get the best experience on our website.",
-  "LOAD_MORE": "Load More"
+  "LOAD_MORE": "Load More",
+  "FILTERING_BY_TAG": "Filtering by tag",
+  "NO_JOBS_FOUND": "No jobs found"
 }
